# financial-report-agent

./: .env.example  .gitignore  app.py  config.py  pyproject.toml
agents/: compliance.py  financial_agent.py  graph.py  localization.py  news_agent.py  planner.py  price_agent.py  risk_agent.py  state.py  writer.py
tools/: search_tools.py  stock_tools.py
utils/: pdf_export.py
