[project]
name = "financial-report-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-ollama>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "yfinance>=0.2",
    "duckduckgo-search>=6.0",
    "streamlit>=1.40",
    "python-dotenv>=1.0",
    "reportlab>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
